--- a/practice.html
+++ b/practice.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Temperature Converter</title>
+  </head>
+  <body>
+    <h1>Celcius to Farenheit Converter</h1>
+    <input
+      type="text"
+      id="farenheit"
+      placeholder="Farenheit"
+      name="f"
+      value=""
+    />
+
     <script src="practicejs.js"></script>
-</body>
+  </body>
 </html>
