celcius added to html

--- a/practice.html
+++ b/practice.html
@@ -15,6 +15,7 @@
       name="f"
       value=""
     />
+    <input type="text" id="celcius" placeholder="Celcius" name="c" value="" />
 
     <script src="practicejs.js"></script>
   </body>
