added convert and reset buttons to html

--- a/practice.html
+++ b/practice.html
@@ -17,6 +17,9 @@
     />
     <input type="text" id="celcius" placeholder="Celcius" name="c" value="" />
 
+    <button id="convert">Convert!</button>
+    <button id="clear">Reset</button>
+
     <script src="practicejs.js"></script>
   </body>
 </html>
